add w7 課程直播記錄檔

--- a/config/content.htm
+++ b/config/content.htm
@@ -5,7 +5,17 @@
 <p>youtube:<a href="https://www.youtube.com/channel/UCCsh_1xCiVRhiKTEWxbyVyg?view_as=subscriber">https://www.youtube.com/channel/UCCsh_1xCiVRhiKTEWxbyVyg?view_as=subscriber</a></p>
 <p>cd2020ag2:<a href="https://github.com/s40723150/cd2020ag2">https://github.com/s40723150/cd2020ag2</a></p>
 <p>cd2020ag2 page:<a href="https://s40723150.github.io/cd2020ag2/content/index.html">https://s40723150.github.io/cd2020ag2/content/index.html</a></p>
-<h1>課堂筆記</h1>
+<h1>week</h1>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week7 </strong></span></h4>
+<p><span style="background-color: #ffffff; color: #000000;">2a w7-3 OBS串流直播紀錄:</span></p>
+<p><span style="background-color: #ffffff; color: #000000;">2020/04/15 </span></p>
+<p><span style="background-color: #ffffff; color: #000000;"><iframe allowfullscreen="allowfullscreen" height="200" src="//www.youtube.com/embed/l_cT2dYYptw" width="300"></iframe></span></p>
+<p>直播內容:</p>
+<p>更新倉儲-新增簡介導覽</p>
+<p>新增OBS所遇到的問題</p>
+<p>OBS串流運用練習</p>
+<hr/><hr/>
+<p></p><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
@@ -239,8 +249,10 @@ print(group[36:49])</pre>
 <h1>Project One</h1>
 <h4><span style="background-color: #ffff00;"><strong>onshape</strong></span></h4>
 <p><a href="https://cad.onshape.com">https://cad.onshape.com</a></p>
-<p>線上免費3D建模平台，隨時隨地即可將腦中的想法實作出來‧</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6thaiPmWWqw" width="560"></iframe></p>
+<p style="text-align: center;">線上免費3D建模平台，隨時隨地即可將腦中的想法實作出來‧</p>
+<p style="text-align: center;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6thaiPmWWqw" width="560"></iframe></p>
 <div class="pl-4" style="text-align: center;"><form></form><span style="background-color: #0000ff; color: #ffffff;"><strong>W7<span style="background-color: #ffffff; color: #000000;">    </span></strong><span style="background-color: #ffffff; color: #000000;">利用</span></span>onshape開始建立模型</div>
 <div class="pl-4" style="text-align: center;"></div>
-<div class="pl-4" style="text-align: center;">網際3D建模平台完成遠距協同模型開發建立製作!</div></div></div>
+<div class="pl-4" style="text-align: center;">網際3D建模平台完成遠距協同模型開發建立製作!</div>
+</div>
+</div>
