--- a/content/Project One.html
+++ b/content/Project One.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li><a href='Project One.html'>Project One</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li><a href='Project One.html'>Project One</a></li>
                       </ul>
                 </nav>
               </div>
@@ -157,11 +157,13 @@ img.add_border {
     <div id="tipue_search_content">Assignment 2 << <a href='Assignment 2.html'>Previous</a> <br /><h1>Project One</h1>
 <h4><span style="background-color: #ffff00;"><strong>onshape</strong></span></h4>
 <p><a href="https://cad.onshape.com">https://cad.onshape.com</a></p>
-<p>線上免費3D建模平台，隨時隨地即可將腦中的想法實作出來‧</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6thaiPmWWqw" width="560"></iframe></p>
+<p style="text-align: center;">線上免費3D建模平台，隨時隨地即可將腦中的想法實作出來‧</p>
+<p style="text-align: center;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6thaiPmWWqw" width="560"></iframe></p>
 <div class="pl-4" style="text-align: center;"><form></form><span style="background-color: #0000ff; color: #ffffff;"><strong>W7<span style="background-color: #ffffff; color: #000000;">    </span></strong><span style="background-color: #ffffff; color: #000000;">利用</span></span>onshape開始建立模型</div>
 <div class="pl-4" style="text-align: center;"></div>
-<div class="pl-4" style="text-align: center;">網際3D建模平台完成遠距協同模型開發建立製作!</div></div></div><br />Assignment 2 << <a href='Assignment 2.html'>Previous</a> </div>
+<div class="pl-4" style="text-align: center;">網際3D建模平台完成遠距協同模型開發建立製作!</div>
+</div>
+</div><br />Assignment 2 << <a href='Assignment 2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
