--- a/content/簡介.html
+++ b/content/簡介.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li><a href='Project One.html'>Project One</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li><a href='Project One.html'>Project One</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,14 +154,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='課堂筆記.html'>Next</a> >> 課堂筆記<br /><h1>簡介</h1>
+    <div id="tipue_search_content"> <a href='week.html'>Next</a> >> week<br /><h1>簡介</h1>
 <p>github:<a href="https://github.com/s40723147/cd2020">https://github.com/s40723147/cd2020</a></p>
 <p>blog:<a href="https://s40723147.github.io/cd2020/blog/index.html">https://s40723147.github.io/cd2020/blog/index.html</a></p>
 <p>reveal:<a href="https://s40723147.github.io/cd2020/reveal/index.html#/">https://s40723147.github.io/cd2020/reveal/index.html#/</a></p>
 <p>youtube:<a href="https://www.youtube.com/channel/UCCsh_1xCiVRhiKTEWxbyVyg?view_as=subscriber">https://www.youtube.com/channel/UCCsh_1xCiVRhiKTEWxbyVyg?view_as=subscriber</a></p>
 <p>cd2020ag2:<a href="https://github.com/s40723150/cd2020ag2">https://github.com/s40723150/cd2020ag2</a></p>
 <p>cd2020ag2 page:<a href="https://s40723150.github.io/cd2020ag2/content/index.html">https://s40723150.github.io/cd2020ag2/content/index.html</a></p>
-<br /> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
+<br /> <a href='week.html'>Next</a> >> week</div>
         
     <!-- footer -->
       <div class="container">
