--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -259,4 +259,5 @@ print(group[36:49])</pre>
 <div class="pl-4" style="text-align: left;">
 <h4 class="firstHeading" id="firstHeading" lang="zh-Hant-TW"><strong>WebGL</strong></h4>
 <p>        WebGL是一種JavaScript API，用於在不使用外掛程式的情況下在任何相容的網頁瀏覽器中呈現互動式2D和3D圖形。WebGL完全整合到瀏覽器的所有網頁標準中，可將影像處理和效果的GPU加速使用方式當做網頁Canvas的一部分。WebGL元素可以加入其他HTML元素之中並與網頁或網頁背景的其他部分混合。WebGL程式由JavaScript編寫的控制代碼和OpenGL Shading Language（GLSL）編寫的著色器代碼組成，該語言類似於C或C++，並在電腦的圖形處理器（GPU）上執行。WebGL由非營利Khronos Group設計和維護。</p>
+<p>資料來源:<a href="https://zh.wikipedia.org/zh-tw/WebGL">https://zh.wikipedia.org/zh-tw/WebGL</a></p>
 </div></div></div>
