--- a/content/week.html
+++ b/content/week.html
@@ -164,7 +164,13 @@ img.add_border {
 <p>新增OBS所遇到的問題</p>
 <p>OBS串流運用練習</p>
 <hr/><hr/>
-<p></p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week8</strong></span></h4>
+<p><span style="background-color: #ffffff; color: #000000;">2a w8-2 OBS串流直播紀錄:</span></p>
+<p><span style="background-color: #ffffff; color: #000000;"><iframe allowfullscreen="allowfullscreen" height="200" src="//www.youtube.com/embed/cPfQ519Ns5g" width="300"></iframe></span></p>
+<p><span style="background-color: #ffffff; color: #000000;">直播內容:</span></p>
+<p><span style="background-color: #ffffff; color: #000000;">處理在分組協同下使用meet會議進行討論</span></p>
+<p><span style="color: #000000;">處理pull requests.問題</span></p>
+<p><span style="color: #000000;">分組倉儲的更新應用</span></p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
         
     <!-- footer -->
       <div class="container">
