--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -15,7 +15,13 @@
 <p>新增OBS所遇到的問題</p>
 <p>OBS串流運用練習</p>
 <hr/><hr/>
-<p></p><h1>課堂筆記</h1>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week8</strong></span></h4>
+<p><span style="background-color: #ffffff; color: #000000;">2a w8-2 OBS串流直播紀錄:</span></p>
+<p><span style="background-color: #ffffff; color: #000000;"><iframe allowfullscreen="allowfullscreen" height="200" src="//www.youtube.com/embed/cPfQ519Ns5g" width="300"></iframe></span></p>
+<p><span style="background-color: #ffffff; color: #000000;">直播內容:</span></p>
+<p><span style="background-color: #ffffff; color: #000000;">處理在分組協同下使用meet會議進行討論</span></p>
+<p><span style="color: #000000;">處理pull requests.問題</span></p>
+<p><span style="color: #000000;">分組倉儲的更新應用</span></p><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
@@ -249,12 +255,16 @@ print(group[36:49])</pre>
 <h1>Project One</h1>
 <h4><span style="background-color: #ffff00;"><strong>onshape:</strong></span><a href="https://cad.onshape.com">https://cad.onshape.com</a></h4>
 <p style="text-align: center;">線上免費3D建模平台，隨時隨地即可將腦中的想法實作出來‧</p>
+<p style="text-align: center;">第一版模型</p>
 <p style="text-align: center;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6thaiPmWWqw" width="560"></iframe></p>
 <div class="pl-4" style="text-align: center;"><form></form><span style="background-color: #0000ff; color: #ffffff;"><strong>W7<span style="background-color: #ffffff; color: #000000;">    </span></strong><span style="background-color: #ffffff; color: #000000;">利用</span></span>onshape開始建立模型</div>
 <div class="pl-4" style="text-align: center;"></div>
 <div class="pl-4" style="text-align: center;">網際3D建模平台完成遠距協同模型開發建立製作!</div>
 <div class="pl-4" style="text-align: center;"><img alt="" height="192" src="/images/未命名.png" width="279"/><img alt="" height="192" src="/images/未命名2.png" width="229"/></div>
 <div class="pl-4" style="text-align: center;">模型參考圖</div>
+<div class="pl-4" style="text-align: center;"></div>
+<div class="pl-4" style="text-align: center;">第二版模型</div>
+<div class="pl-4" style="text-align: left;"></div>
 <div class="pl-4" style="text-align: center;"><hr/></div>
 <div class="pl-4" style="text-align: left;">
 <h4 class="firstHeading" id="firstHeading" lang="zh-Hant-TW"><strong>WebGL</strong></h4>
