--- a/config/content.htm
+++ b/config/content.htm
@@ -255,12 +255,18 @@ print(group[36:49])</pre>
 <h1>Project One</h1>
 <h4><span style="background-color: #ffff00;"><strong>onshape:</strong></span><a href="https://cad.onshape.com">https://cad.onshape.com</a></h4>
 <p style="text-align: center;">線上免費3D建模平台，隨時隨地即可將腦中的想法實作出來‧</p>
+<p style="text-align: center;"><span style="background-color: #00ff00;">第一版模型</span></p>
 <p style="text-align: center;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6thaiPmWWqw" width="560"></iframe></p>
 <div class="pl-4" style="text-align: center;"><form></form><span style="background-color: #0000ff; color: #ffffff;"><strong>W7<span style="background-color: #ffffff; color: #000000;">    </span></strong><span style="background-color: #ffffff; color: #000000;">利用</span></span>onshape開始建立模型</div>
 <div class="pl-4" style="text-align: center;"></div>
 <div class="pl-4" style="text-align: center;">網際3D建模平台完成遠距協同模型開發建立製作!</div>
 <div class="pl-4" style="text-align: center;"><img alt="" height="192" src="/images/未命名.png" width="279"/><img alt="" height="192" src="/images/未命名2.png" width="229"/></div>
 <div class="pl-4" style="text-align: center;">模型參考圖</div>
+<div class="pl-4" style="text-align: center;"></div>
+<div class="pl-4" style="text-align: center;"><span style="background-color: #00ff00;">第二版模型</span></div>
+<div class="pl-4" style="text-align: left;"><img alt="" height="208" src="/images/第二版.png" width="217"/><img alt="" height="218" src="/images/第二版-1.png" width="299"/></div>
+<div class="pl-4" style="text-align: center;">模型參考圖</div>
+<div class="pl-4" style="text-align: center;">本次修改主要修正為輪軸分離設計，修改邊角銳利，以及新增尾翼‧</div>
 <div class="pl-4" style="text-align: center;"><hr/></div>
 <div class="pl-4" style="text-align: left;">
 <h4 class="firstHeading" id="firstHeading" lang="zh-Hant-TW"><strong>WebGL</strong></h4>
