add onshape 匯出步驟教學

--- a/config/content.htm
+++ b/config/content.htm
@@ -267,7 +267,20 @@ print(group[36:49])</pre>
 <div class="pl-4" style="text-align: left;"><img alt="" height="208" src="/images/第二版.png" width="217"/><img alt="" height="218" src="/images/第二版-1.png" width="299"/></div>
 <div class="pl-4" style="text-align: center;">模型參考圖</div>
 <div class="pl-4" style="text-align: center;">本次修改主要修正為輪軸分離設計，修改邊角銳利，以及新增尾翼‧</div>
-<div class="pl-4" style="text-align: center;"><hr/></div>
+<div class="pl-4" style="text-align: center;"><hr/><hr/></div>
+<h4 class="pl-4" style="text-align: left;"><strong><span style="background-color: #ccffff;">使用onshape進行轉檔匯出步驟</span></strong></h4>
+<p>1.開啟模型編輯</p>
+<p><img alt="" height="230" src="/images/1.png" width="500"/></p>
+<p>2.選取右下方零件(欲匯出的零件)</p>
+<p><img caption="false" height="290" src="/images/2.png" width="300"/></p>
+<p>3.點選滑鼠右鍵顯示工具列-&gt;選用匯出</p>
+<p><img caption="false" height="381" src="/images/3.png" width="380"/></p>
+<p>4.點選後會出現一些功能選項根據需要選取</p>
+<p><img alt="" height="480" src="/images/4.png" width="500"/></p>
+<p></p>
+<p>5.能匯出的檔案類型有:</p>
+<p><img alt="" height="249" src="/images/5.png" width="725"/></p>
+<div class="pl-4" style="text-align: center;"><hr/><br/><hr/></div>
 <div class="pl-4" style="text-align: left;">
 <h4 class="firstHeading" id="firstHeading" lang="zh-Hant-TW"><strong>WebGL</strong></h4>
 <p>        WebGL是一種JavaScript API，用於在不使用外掛程式的情況下在任何相容的網頁瀏覽器中呈現互動式2D和3D圖形。WebGL完全整合到瀏覽器的所有網頁標準中，可將影像處理和效果的GPU加速使用方式當做網頁Canvas的一部分。WebGL元素可以加入其他HTML元素之中並與網頁或網頁背景的其他部分混合。WebGL程式由JavaScript編寫的控制代碼和OpenGL Shading Language（GLSL）編寫的著色器代碼組成，該語言類似於C或C++，並在電腦的圖形處理器（GPU）上執行。WebGL由非營利Khronos Group設計和維護。</p>
