--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -255,7 +255,7 @@ print(group[36:49])</pre>
 <h1>Project One</h1>
 <h4><span style="background-color: #ffff00;"><strong>onshape:</strong></span><a href="https://cad.onshape.com">https://cad.onshape.com</a></h4>
 <p style="text-align: center;">線上免費3D建模平台，隨時隨地即可將腦中的想法實作出來‧</p>
-<p style="text-align: center;">第一版模型</p>
+<p style="text-align: center;"><span style="background-color: #00ff00;">第一版模型</span></p>
 <p style="text-align: center;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6thaiPmWWqw" width="560"></iframe></p>
 <div class="pl-4" style="text-align: center;"><form></form><span style="background-color: #0000ff; color: #ffffff;"><strong>W7<span style="background-color: #ffffff; color: #000000;">    </span></strong><span style="background-color: #ffffff; color: #000000;">利用</span></span>onshape開始建立模型</div>
 <div class="pl-4" style="text-align: center;"></div>
@@ -263,9 +263,15 @@ print(group[36:49])</pre>
 <div class="pl-4" style="text-align: center;"><img alt="" height="192" src="/images/未命名.png" width="279"/><img alt="" height="192" src="/images/未命名2.png" width="229"/></div>
 <div class="pl-4" style="text-align: center;">模型參考圖</div>
 <div class="pl-4" style="text-align: center;"></div>
-<div class="pl-4" style="text-align: center;">第二版模型</div>
-<div class="pl-4" style="text-align: left;"></div>
-<div class="pl-4" style="text-align: center;"><hr/></div>
+<div class="pl-4" style="text-align: center;"><span style="background-color: #00ff00;">第二版模型</span></div>
+<div class="pl-4" style="text-align: left;"><img alt="" height="208" src="/images/第二版.png" width="217"/><img alt="" height="218" src="/images/第二版-1.png" width="299"/></div>
+<div class="pl-4" style="text-align: center;">模型參考圖</div>
+<div class="pl-4" style="text-align: center;">本次修改主要修正為輪軸分離設計，修改邊角銳利，以及新增尾翼‧</div>
+<div class="pl-4" style="text-align: center;"><hr/><hr/></div>
+<h4 class="pl-4" style="text-align: left;"><strong><span style="background-color: #ccffff;">使用onshape進行轉檔匯出步驟</span></strong></h4>
+<p>1.開啟模型編輯</p>
+<p></p>
+<div class="pl-4" style="text-align: center;"><hr/><br/><hr/></div>
 <div class="pl-4" style="text-align: left;">
 <h4 class="firstHeading" id="firstHeading" lang="zh-Hant-TW"><strong>WebGL</strong></h4>
 <p>        WebGL是一種JavaScript API，用於在不使用外掛程式的情況下在任何相容的網頁瀏覽器中呈現互動式2D和3D圖形。WebGL完全整合到瀏覽器的所有網頁標準中，可將影像處理和效果的GPU加速使用方式當做網頁Canvas的一部分。WebGL元素可以加入其他HTML元素之中並與網頁或網頁背景的其他部分混合。WebGL程式由JavaScript編寫的控制代碼和OpenGL Shading Language（GLSL）編寫的著色器代碼組成，該語言類似於C或C++，並在電腦的圖形處理器（GPU）上執行。WebGL由非營利Khronos Group設計和維護。</p>
