--- a/content/Project One.html
+++ b/content/Project One.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li><a href='Project One.html'>Project One</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,40 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Assignment 2 << <a href='Assignment 2.html'>Previous</a> <br /><h1>Project One</h1>
-<h4><span style="background-color: #ffff00;"><strong>onshape:</strong></span><a href="https://cad.onshape.com">https://cad.onshape.com</a></h4>
-<p style="text-align: center;">線上免費3D建模平台，隨時隨地即可將腦中的想法實作出來‧</p>
-<p style="text-align: center;"><span style="background-color: #00ff00;">第一版模型</span></p>
-<p style="text-align: center;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6thaiPmWWqw" width="560"></iframe></p>
-<div class="pl-4" style="text-align: center;"><form></form><span style="background-color: #0000ff; color: #ffffff;"><strong>W7<span style="background-color: #ffffff; color: #000000;">    </span></strong><span style="background-color: #ffffff; color: #000000;">利用</span></span>onshape開始建立模型</div>
-<div class="pl-4" style="text-align: center;"></div>
-<div class="pl-4" style="text-align: center;">網際3D建模平台完成遠距協同模型開發建立製作!</div>
-<div class="pl-4" style="text-align: center;"><img alt="" height="192" src="./../images/未命名.png" width="279"/><img alt="" height="192" src="./../images/未命名2.png" width="229"/></div>
-<div class="pl-4" style="text-align: center;">模型參考圖</div>
-<div class="pl-4" style="text-align: center;"></div>
-<div class="pl-4" style="text-align: center;"><span style="background-color: #00ff00;">第二版模型</span></div>
-<div class="pl-4" style="text-align: left;"><img alt="" height="208" src="./../images/第二版.png" width="217"/><img alt="" height="218" src="./../images/第二版-1.png" width="299"/></div>
-<div class="pl-4" style="text-align: center;">模型參考圖</div>
-<div class="pl-4" style="text-align: center;">本次修改主要修正為輪軸分離設計，修改邊角銳利，以及新增尾翼‧</div>
-<div class="pl-4" style="text-align: center;"><hr/><hr/></div>
-<h4 class="pl-4" style="text-align: left;"><strong><span style="background-color: #ccffff;">使用onshape進行轉檔匯出步驟</span></strong></h4>
-<p>1.開啟模型編輯</p>
-<p><img alt="" height="230" src="./../images/1.png" width="500"/></p>
-<p>2.選取右下方零件(欲匯出的零件)</p>
-<p><img caption="false" height="290" src="./../images/2.png" width="300"/></p>
-<p>3.點選滑鼠右鍵顯示工具列-&gt;選用匯出</p>
-<p><img caption="false" height="381" src="./../images/3.png" width="380"/></p>
-<p>4.點選後會出現一些功能選項根據需要選取</p>
-<p><img alt="" height="480" src="./../images/4.png" width="500"/></p>
-<p></p>
-<p>5.能匯出的檔案類型有:</p>
-<p><img alt="" height="249" src="./../images/5.png" width="725"/></p>
-<div class="pl-4" style="text-align: center;"><hr/><br/><hr/></div>
-<div class="pl-4" style="text-align: left;">
-<h4 class="firstHeading" id="firstHeading" lang="zh-Hant-TW"><strong>WebGL</strong></h4>
-<p>        WebGL是一種JavaScript API，用於在不使用外掛程式的情況下在任何相容的網頁瀏覽器中呈現互動式2D和3D圖形。WebGL完全整合到瀏覽器的所有網頁標準中，可將影像處理和效果的GPU加速使用方式當做網頁Canvas的一部分。WebGL元素可以加入其他HTML元素之中並與網頁或網頁背景的其他部分混合。WebGL程式由JavaScript編寫的控制代碼和OpenGL Shading Language（GLSL）編寫的著色器代碼組成，該語言類似於C或C++，並在電腦的圖形處理器（GPU）上執行。WebGL由非營利Khronos Group設計和維護。</p>
-<p>資料來源:<a href="https://zh.wikipedia.org/zh-tw/WebGL">https://zh.wikipedia.org/zh-tw/WebGL</a></p>
-</div></div></div><br />Assignment 2 << <a href='Assignment 2.html'>Previous</a> </div>
+    <div id="tipue_search_content">Assignment 2 << <a href='Assignment 2.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape<br /><h1>Project One</h1>
+<br />Assignment 2 << <a href='Assignment 2.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape</div>
         
     <!-- footer -->
       <div class="container">
