--- a/content/onshape.html
+++ b/content/onshape.html
@@ -154,86 +154,40 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Assignment << <a href='Assignment.html'>Previous</a> <a href='Assignment 2.html'>Next</a> >> Assignment 2<br /><h1>Assignment 1</h1>
-<h4>亂數分組</h4>
-<h4><strong><a href="https://github.com/s40723147/cd2020/blob/master/PDF/cd2020%20ag2%20Project%201%20%E4%BA%82%E6%95%B8%E5%88%86%E7%B5%84.pdf">pdf連結</a></strong></h4>
-<p>亂數分組<span style="background-color: #ffcc00;">python程式</span>-甲班</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import random
-groupList=[['40723104', '40723107', '40723114', '40723115', '40723118', '40723122', '40723123', '40723140', '40723149', '40723151', '40723153', '40723154', '40723155', '40623143', '40723108', '40723127', '40723132', '40723133', '40723137', '40723141', '40723143', '40723144', '40723147', '40723148', '40723150', '40723103', '40723110', '40723112', '40723120', '40723125', '40723126', '40723128', '40723130', '40723139', '40723142', '40723145', '40723146', '40423155', '40723101', '40723102', '40723106', '40723111', '40723119', '40723121', '40723124', '40723134', '40723135', '40723136', '40723138']]
-
-group=groupList[0]
-#將group數列隨機排列
-random.shuffle(group)
-#列印數列
-print(group)
-#列印數列(1~12)
-print(group[0:12])
-#列印數列(13~24)
-print(group[12:24])
-#列印數列(25~36)
-print(group[24:36])
-#列印數列(37~49)
-print(group[36:49])</pre>
-<p><span style="background-color: #000000; color: #ffffff;"></span>使用python編寫亂數分組程式</p>
-<p>[Python]-隨機random函數</p>
-<div>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import random</pre>
-<span style="color: #ffffff; background-color: #00ff00;"><br/></span>匯入 <span>隨機random函數</span></div>
-<div><span></span></div>
-<div>
-<pre class="brush:py;auto-links:false;toolbar:false;first-line:5" contenteditable="false">groupList=[['40723104', '40723107', '40723114', '40723115', '40723118', '40723122', '40723123', '40723140', '40723149', '40723151', '40723153', '40723154', '40723155', '40623143', '40723108', '40723127', '40723132', '40723133', '40723137', '40723141', '40723143', '40723144', '40723147', '40723148', '40723150', '40723103', '40723110', '40723112', '40723120', '40723125', '40723126', '40723128', '40723130', '40723139', '40723142', '40723145', '40723146', '40423155', '40723101', '40723102', '40723106', '40723111', '40723119', '40723121', '40723124', '40723134', '40723135', '40723136', '40723138']]</pre>
-</div>
-<div>定義 groupList=所有修課學生 共49位</div>
-<div></div>
-<div>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">group=groupList[0]</pre>
-</div>
-<div>設定變數group=groupList[0] </div>
-<div></div>
-<div>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">random.shuffle(group)</pre>
-</div>
-<div><span style="color: #ffffff;"><span style="color: #000000;">使用 random.shuffle</span><br/><br/><span style="color: #000000;">主要運用在將函數中的順序</span>打亂</span></div>
-<div><span style="color: #ffffff;"></span></div>
-<div><span style="color: #ffffff; background-color: #00ff00;"></span></div>
-<div>將函數(<span>group)的順序打亂</span></div>
-<div><span></span></div>
-<div>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">#列印數列
-print(group)
-#列印數列(1~12)
-print(group[0:12])
-#列印數列(13~24)
-print(group[12:24])
-#列印數列(25~36)
-print(group[24:36])
-#列印數列(37~49)
-print(group[36:49])</pre>
-<span><br/></span></div>
-<div><span style="color: #000000;"></span></div>
-<div><span style="color: #000000;">print 列印運用</span></div>
-<div><span style="color: #000000;"><br/><br/>參考資料:<a href="https://nkust.gitbook.io/python/untitled">https://nkust.gitbook.io/python/untitled</a></span></div>
-<div><span style="color: #000000;"></span></div>
-<div><span style="color: #000000; background-color: #ffff00;">測試1</span></div>
-<div><span style="color: #000000;"><img alt="" height="190" src="./../images/範例1.png" width="1277"/></span></div>
-<div><span style="color: #000000;"></span></div>
-<div><span style="color: #000000;">標示 1 2 3 4 組</span></div>
-<div><hr/>
-<p><strong>持續進步</strong></p>
-<p>1.可更進一步的對話視窗</p>
-<p>    依照客戶需求給定特定變數完成亂數抽取</p>
-<p>    例如<span>:</span>給定組別、人數、或是其他條件</p>
-<p>2.網頁的程序運用</p>
-<p>       能夠再遠端直接作抽取動作不必下載</p>
-<p>       可更加方便簡潔快速的抽取方式</p>
-<p>3.在網頁上抓取資料</p>
-<p>       能夠在網頁上擷取或是引用資料</p>
-<p>       直接傳達到亂數程序上提供更方便的服務</p>
-<p>4.資料庫存取</p>
-<p>       完成亂數程序後是否可以</p>
-<p>       直接作存取或是匯出動作</p>
+    <div id="tipue_search_content">Project One << <a href='Project One.html'>Previous</a> <a href='CoppeliaSim.html'>Next</a> >> CoppeliaSim<br /><h1>onshape</h1>
+<h4><span style="background-color: #ffff00;"><strong>onshape:</strong></span><a href="https://cad.onshape.com">https://cad.onshape.com</a></h4>
+<p style="text-align: center;">線上免費3D建模平台，隨時隨地即可將腦中的想法實作出來‧</p>
+<p style="text-align: center;"><span style="background-color: #00ff00;">第一版模型</span></p>
+<p style="text-align: center;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6thaiPmWWqw" width="560"></iframe></p>
+<div class="pl-4" style="text-align: center;"><form></form><span style="background-color: #0000ff; color: #ffffff;"><strong>W7<span style="background-color: #ffffff; color: #000000;">    </span></strong><span style="background-color: #ffffff; color: #000000;">利用</span></span>onshape開始建立模型</div>
+<div class="pl-4" style="text-align: center;"></div>
+<div class="pl-4" style="text-align: center;">網際3D建模平台完成遠距協同模型開發建立製作!</div>
+<div class="pl-4" style="text-align: center;"><img alt="" height="192" src="./../images/未命名.png" width="279"/><img alt="" height="192" src="./../images/未命名2.png" width="229"/></div>
+<div class="pl-4" style="text-align: center;">模型參考圖</div>
+<div class="pl-4" style="text-align: center;"></div>
+<div class="pl-4" style="text-align: center;"><span style="background-color: #00ff00;">第二版模型</span></div>
+<div class="pl-4" style="text-align: left;"><img alt="" height="208" src="./../images/第二版.png" width="217"/><img alt="" height="218" src="./../images/第二版-1.png" width="299"/></div>
+<div class="pl-4" style="text-align: center;">模型參考圖</div>
+<div class="pl-4" style="text-align: center;">本次修改主要修正為輪軸分離設計，修改邊角銳利，以及新增尾翼‧</div>
+<div class="pl-4" style="text-align: center;"><hr/><hr/></div>
+<h4 class="pl-4" style="text-align: left;"><strong><span style="background-color: #ccffff;">使用onshape進行轉檔匯出步驟</span></strong></h4>
+<p>1.開啟模型編輯</p>
+<p><img alt="" height="230" src="./../images/1.png" width="500"/></p>
+<p>2.選取右下方零件(欲匯出的零件)</p>
+<p><img caption="false" height="290" src="./../images/2.png" width="300"/></p>
+<p>3.點選滑鼠右鍵顯示工具列-&gt;選用匯出</p>
+<p><img caption="false" height="381" src="./../images/3.png" width="380"/></p>
+<p>4.點選後會出現一些功能選項根據需要選取</p>
+<p><img alt="" height="480" src="./../images/4.png" width="500"/></p>
 <p></p>
-<br />Assignment << <a href='Assignment.html'>Previous</a> <a href='Assignment 2.html'>Next</a> >> Assignment 2</div>
+<p>5.能匯出的檔案類型有:</p>
+<p><img alt="" height="249" src="./../images/5.png" width="725"/></p>
+<div class="pl-4" style="text-align: center;"><hr/><br/><hr/></div>
+<div class="pl-4" style="text-align: left;">
+<h4 class="firstHeading" id="firstHeading" lang="zh-Hant-TW"><strong>WebGL</strong></h4>
+<p>        WebGL是一種JavaScript API，用於在不使用外掛程式的情況下在任何相容的網頁瀏覽器中呈現互動式2D和3D圖形。WebGL完全整合到瀏覽器的所有網頁標準中，可將影像處理和效果的GPU加速使用方式當做網頁Canvas的一部分。WebGL元素可以加入其他HTML元素之中並與網頁或網頁背景的其他部分混合。WebGL程式由JavaScript編寫的控制代碼和OpenGL Shading Language（GLSL）編寫的著色器代碼組成，該語言類似於C或C++，並在電腦的圖形處理器（GPU）上執行。WebGL由非營利Khronos Group設計和維護。</p>
+<p>資料來源:<a href="https://zh.wikipedia.org/zh-tw/WebGL">https://zh.wikipedia.org/zh-tw/WebGL</a></p>
+<br />Project One << <a href='Project One.html'>Previous</a> <a href='CoppeliaSim.html'>Next</a> >> CoppeliaSim</div>
         
     <!-- footer -->
       <div class="container">
