--- a/content/week.html
+++ b/content/week.html
@@ -170,7 +170,10 @@ img.add_border {
 <p><span style="background-color: #ffffff; color: #000000;">直播內容:</span></p>
 <p><span style="background-color: #ffffff; color: #000000;">處理在分組協同下使用meet會議進行討論</span></p>
 <p><span style="color: #000000;">處理pull requests.問題</span></p>
-<p><span style="color: #000000;">分組倉儲的更新應用</span></p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
+<p><span style="color: #000000;">分組倉儲的更新應用</span></p>
+<hr/>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong> </strong></span></h4>
+<p><span style="background-color: #ffffff; color: #000000;"></span></p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
         
     <!-- footer -->
       <div class="container">
