--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -21,7 +21,10 @@
 <p><span style="background-color: #ffffff; color: #000000;">直播內容:</span></p>
 <p><span style="background-color: #ffffff; color: #000000;">處理在分組協同下使用meet會議進行討論</span></p>
 <p><span style="color: #000000;">處理pull requests.問題</span></p>
-<p><span style="color: #000000;">分組倉儲的更新應用</span></p><h1>課堂筆記</h1>
+<p><span style="color: #000000;">分組倉儲的更新應用</span></p>
+<hr/>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong> </strong></span></h4>
+<p><span style="background-color: #ffffff; color: #000000;"></span></p><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
