--- a/content/week.html
+++ b/content/week.html
@@ -172,8 +172,15 @@ img.add_border {
 <p><span style="color: #000000;">處理pull requests.問題</span></p>
 <p><span style="color: #000000;">分組倉儲的更新應用</span></p>
 <hr/>
-<h4><span style="background-color: #99cc00; color: #000000;"><strong> </strong></span></h4>
-<p><span style="background-color: #ffffff; color: #000000;"></span></p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week10</strong></span></h4>
+<p><span style="background-color: #ffffff; color: #000000;"></span><span style="background-color: #ffffff; color: #000000;"></span></p>
+<p><span>利用onshape繪圖</span></p>
+<p><span>進行匯出轉檔操作</span></p>
+<hr/><hr/>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week11</strong></span></h4>
+<p><span>將onshape圖檔轉換至URL提供組員參考使用</span></p>
+<p><span>將onshape圖檔匯出成STL並將它轉入CoppeliaSim中</span></p>
+<p>W12分配至 RemoteAPI </p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
         
     <!-- footer -->
       <div class="container">
