--- a/content/Project One.html
+++ b/content/Project One.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a></li>
                       </ul>
                 </nav>
               </div>
@@ -156,7 +156,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">Assignment 2 << <a href='Assignment 2.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape<br /><h1>Project One</h1>
 <p>四輪小車模型匯出連結:<strong><a href="https://meet.google.com/linkredirect?authuser=0&amp;dest=https%3A%2F%2Fcad.onshape.com%2Fdocuments%2Fe3eb0b663356e543ec6baaaf%2Fw%2Fa4c0716868b2978a27b12ee4%2Fe%2F92badca8de429b497d1e9f01">四輪車模型</a></strong></p>
-<p>可匯出提供參考</p><br />Assignment 2 << <a href='Assignment 2.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape</div>
+<p>可匯出提供參考</p>
+<br />Assignment 2 << <a href='Assignment 2.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape</div>
         
     <!-- footer -->
       <div class="container">
