add google Domain API OAuth 2.0 setting

--- a/config/content.htm
+++ b/config/content.htm
@@ -339,4 +339,10 @@ print(group[36:49])</pre>
 <p>Once you have above elements in a directory known to Python, call<span> </span><em>import sim</em><span> </span>to load the library. To enable the remote API on the client side (i.e. your application), call<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm#simxStart"><em>sim.simxStart</em></a>. See the<span> </span><em>simpleTest.py</em><span> </span>script in the<span> </span><em>programming/remoteApiBindings/python</em><span> </span>directory for an example.<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm">This page</a><span> </span>lists and describes all supported Python remote API functions. CoppeliaSim remote API functions can easily be recognized from their "simx"-prefix.</p>
 <hr/>
 <p><span>將以上元素放在Python已知的目錄中後，請調用</span><em><span><span>import sim</span></span></em><span><span>加載庫。</span><span>要在客戶端（即您的應用程序）上啟用遠程API，請調用</span></span><em><span><span>sim.simxStart</span></span></em><span><span>。</span><span>有關</span></span><em><span><span>示例</span></span></em><span><span>，</span><span>請參見</span></span><em><span><span>programming / remoteApiBindings / python</span></span></em><span><span>目錄中</span><span>的</span><em><span>simpleTest.py</span></em><span>腳本</span><span>。</span></span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm"><span><span>本頁</span></span></a><span><span>列出並描述了所有受支持的Python遠程API函數。</span><span>CoppeliaSim遠程API函數可以從其“ simx”前綴輕鬆識別。</span></span></p>
-<p><b></b></p></div></div></div>
+<h2>Google + Domain API</h2>
+<p><b></b>參考<a href="http://mde.tw/cd2020pj1/content/CMS.html">http://mde.tw/cd2020pj1/content/CMS.html</a>中的</p>
+<p>Google + Domain API 導入</p>
+<p><span>OAuth 2.0  設定</span></p>
+<p><span><img alt="" height="391" src="/images/未命名.png" width="337"/></span></p>
+<p>操作影片:</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZVEqJiweTdk" width="400"></iframe></p></div></div></div>
