--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -310,6 +310,7 @@ print(group[36:49])</pre>
 <p><b>操作影片參考:</b></p>
 <p><b><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mg_syxl1w64" width="560"></iframe></b></p>
 <h2>Remote API</h2>
+<h4><strong><span style="background-color: #ffff00;"> CoppeliaSim </span><span style="background-color: #99cc00; color: #000000;">下的 Remote API 設定</span></strong></h4>
 <table class="subsectionTable" height="49" style="width: 531.8px;">
 <tbody>
 <tr class="subsectionTd">
@@ -338,4 +339,8 @@ print(group[36:49])</pre>
 <p>Once you have above elements in a directory known to Python, call<span> </span><em>import sim</em><span> </span>to load the library. To enable the remote API on the client side (i.e. your application), call<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm#simxStart"><em>sim.simxStart</em></a>. See the<span> </span><em>simpleTest.py</em><span> </span>script in the<span> </span><em>programming/remoteApiBindings/python</em><span> </span>directory for an example.<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm">This page</a><span> </span>lists and describes all supported Python remote API functions. CoppeliaSim remote API functions can easily be recognized from their "simx"-prefix.</p>
 <hr/>
 <p><span>將以上元素放在Python已知的目錄中後，請調用</span><em><span><span>import sim</span></span></em><span><span>加載庫。</span><span>要在客戶端（即您的應用程序）上啟用遠程API，請調用</span></span><em><span><span>sim.simxStart</span></span></em><span><span>。</span><span>有關</span></span><em><span><span>示例</span></span></em><span><span>，</span><span>請參見</span></span><em><span><span>programming / remoteApiBindings / python</span></span></em><span><span>目錄中</span><span>的</span><em><span>simpleTest.py</span></em><span>腳本</span><span>。</span></span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm"><span><span>本頁</span></span></a><span><span>列出並描述了所有受支持的Python遠程API函數。</span><span>CoppeliaSim遠程API函數可以從其“ simx”前綴輕鬆識別。</span></span></p>
-<p><b></b></p></div></div></div>
+<h2>Google + Domain API</h2>
+<p><b></b>參考<a href="http://mde.tw/cd2020pj1/content/CMS.html">http://mde.tw/cd2020pj1/content/CMS.html</a>中的</p>
+<p>Google + Domain API 導入</p>
+<p><span>OAuth 2.0  設定</span></p>
+<p><span></span></p></div></div></div>
