--- a/content/Google + Domain API.html
+++ b/content/Google + Domain API.html
@@ -154,69 +154,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week << <a href='week.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment<br /><h1>課堂筆記</h1>
-<p>將紀錄40723147 在CD2020當周課堂筆記</p>
-<hr/>
-<h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
-<p><span style="background-color: #ffff99;"><strong>HTTP 與 HTTPS</strong></span></p>
-<p>字母<span style="background-color: #ff0000;">S</span>代表了網站使用編碼協定的安全性(secure)</p>
-<p>HTTP協定<span style="background-color: #00ffff;">不使用</span>加密協定‧</p>
-<p>反觀HTTPS協定，以<span style="background-color: #00ffff;">保密為前提</span>為研發‧</p>
-<p>是以加入SSL協定作為安全憑證，</p>
-<p>因此網站透過協定上的加密機制後能夠防止資料竊取者</p>
-<p>就算攔截到了傳輸資訊卻也無法直接看到傳輸中的資料</p>
-<p><strong></strong></p>
-<p><strong><span>HTTPS 是以安全為目的得 HTTP 通道，</span></strong></p>
-<p><strong><span>經由網站傳輸協定進行通訊和利用 SSL/TLS 憑證來加密封包</span></strong></p>
-<p><strong><span>參考資料:<a href="https://www.webdesigns.com.tw/SSLANDHTTPS.asp">https://www.webdesigns.com.tw/SSLANDHTTPS.asp</a></span></strong></p>
-<p><strong><span></span></strong></p>
-<p><strong><span style="background-color: #ffff99;">SSL協定</span></strong></p>
-<p><span style="background-color: #ffff99;"></span>SSL 為 <em class="ip">Secure Sockets Layer (安全通訊協定)</em> 的縮寫，</p>
-<p>後來發展成 Transport Layer Security，</p>
-<p>傳輸層安全協定 (TLS)；簡單說就是在通訊的過程中，</p>
-<p>透過特定的演算法把傳遞內容加密，</p>
-<p>防止內容被竊取或竄改。</p>
-<p>參考資料:<a href="https://medium.com/schaoss-blog/%E9%96%8B%E7%99%BC%E7%94%A8-ssl-%E8%87%AA%E7%B0%BD%E8%A8%AD%E5%AE%9A%E6%B5%81%E7%A8%8B-3c41b3a46618">網址</a></p>
-<div>參考步驟:<a href="https://blog.cssuen.tw/create-a-self-signed-certificate-using-openssl-240c7b0579d3">網址</a></div>
-<div></div>
-<div><hr/><span style="color: #ffffff; background-color: #00ff00;"><br/></span></div>
-<div><strong><span style="color: #333333; background-color: #ffff99;">Dart</span></strong></div>
-<p><span style="background-color: #00ffff;">開放原始碼程式語言</span>，由Google主導開發，於2011年10月公開。它的開發團隊由</p>
-<p>Google Chrome瀏覽器V8引擎團隊的領導者拉爾斯·巴克主持，目標在於成為下一代</p>
-<p>結構化Web開發語言。</p>
-<p><span style="background-color: #00ffff;">類似JavaScript</span>，<span style="background-color: #00ffff;">Dart也是一種物件導向語言</span>，但是它採用類別為基的程式設計。它</p>
-<p>只允許單一繼承，<span style="background-color: #00ffff;">語法風格接近C語言</span>。</p>
-<p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Dart">https://zh.wikipedia.org/zh-tw/Dart</a></p>
-<p><span color="#333333" style="color: #333333;"><span style="background-color: #ffff99;"><b>python</b></span></span><span color="#333333" style="color: #333333;"><br/></span></p>
-<p><span color="#333333" style="color: #333333;">是一種<span style="background-color: #00ffff;">廣泛使用</span>的直譯式、進階程式、通用型程式語言，由吉多·范羅蘇姆創造，第</span></p>
-<p><span color="#333333" style="color: #333333;">一版釋出於1991年。可以視之為一種改良（加入一些其他程式語言的優點，如物件</span></p>
-<p><span color="#333333" style="color: #333333;">導向）的LISP。<span style="background-color: #00ffff;">Python的設計哲學強調代碼的可讀性和簡潔的語法</span>（尤其</span></p>
-<p><span color="#333333" style="color: #333333;">是使用空格縮排劃分代碼塊，而非使用大括號或者關鍵詞）。相比於C++或Java，</span></p>
-<p><span color="#333333" style="color: #333333;">Python讓開發者<span style="background-color: #00ffff;">能夠用更少的代碼表達想法</span>。不管是小型還是大型程式，該語言都</span></p>
-<p><span color="#333333" style="color: #333333;">試圖讓程式的結構清晰明瞭。</span></p>
-<p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Python">https://zh.wikipedia.org/zh-tw/Python</a></p>
-<hr/>
-<h4><span style="background-color: #000000; color: #ffffff;"></span><span style="background-color: #0000ff; color: #ffffff;"><strong>W6</strong></span></h4>
-<p>OBS串流直播問題:</p>
-<p>Q:建立OBS與youtube聯繫無法串流</p>
-<p>nvidia處理器與OBS對應路徑抓取問題</p>
-<p>(同時也適用使用OBS串流直播時顯示器讀取畫面為黑頻)</p>
-<p>A:在nvidia中→管理3D設定→程式設定→若無OBSprotabie請先新增進入選項</p>
-<p>然後再將慣用處理器更改為"整合圖形"</p>
-<p>回到OBSprotable再次選取顯示器擷取變可抓取到顯示器畫面</p>
-<p><img alt="" height="290" src="./../images/nvidia 設定.png" width="420"/></p>
-<p>Q:OBS在建立串流時無法輸出</p>
-<p>A:將OBSprotable中→設定→輸出→編碼器更換成(軟體編碼x264)</p>
-<p><img alt="" height="114" src="./../images/obsprotable X264.png" width="539"/></p>
-<p></p>
-<p><span>x264(軟體</span><span>) </span>功能</p>
-<p><br/>x264提供了命令行介面以及應用程式介面（API）。前者在許多圖形用戶介面軟體中得到應用，如Staxrip和MeGUI。後者也在許多其他類型到軟體中調用，如HandBrake和FFmpeg。</p>
-<p>x264具備的H.264標準定義的特性，較之其他H.264編碼器而言多出許多。H.264編碼器之間的特性比較，可以參見：</p>
-<p>更多資訊：H.264 § Software encoder feature comparison<br/>x264包含有一些心理視覺增強技術，以增強編碼影片的主觀品質。</p>
-<p>x264能夠在普通計算機上實現多路高畫質影片的實時編碼。</p>
-<p>x264也是第一個免費的藍光影片編碼器。2010年4月，x264項目組宣布藍光格式影片編碼功能完成，使得x264成為首個免費的藍光影片編碼器。</p>
-<p>資料來源: <a href="https://zh.wikipedia.org/wiki/X264">https://zh.wikipedia.org/wiki/X264</a> (Wiki)</p>
-<br />week << <a href='week.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
+    <div id="tipue_search_content">Remote API << <a href='Remote API.html'>Previous</a> <br /><h1>Google + Domain API</h1>
+<p><b></b>參考<a href="http://mde.tw/cd2020pj1/content/CMS.html">http://mde.tw/cd2020pj1/content/CMS.html</a>中的</p>
+<p>Google + Domain API 導入</p>
+<p><span>OAuth 2.0  設定</span></p>
+<p><span><img alt="" height="391" src="./../images/未命名.png" width="337"/></span></p>
+<p>操作影片:</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZVEqJiweTdk" width="400"></iframe></p></div></div></div><br />Remote API << <a href='Remote API.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
