--- a/content/Remote API.html
+++ b/content/Remote API.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">CoppeliaSim << <a href='CoppeliaSim.html'>Previous</a> <br /><h1>Remote API</h1>
+    <div id="tipue_search_content">CoppeliaSim << <a href='CoppeliaSim.html'>Previous</a> <a href='Google + Domain API.html'>Next</a> >> Google + Domain API<br /><h1>Remote API</h1>
 <h4><strong><span style="background-color: #ffff00;"> CoppeliaSim </span><span style="background-color: #99cc00; color: #000000;">下的 Remote API 設定</span></strong></h4>
 <table class="subsectionTable" height="49" style="width: 531.8px;">
 <tbody>
@@ -184,7 +184,7 @@ img.add_border {
 <p>Once you have above elements in a directory known to Python, call<span> </span><em>import sim</em><span> </span>to load the library. To enable the remote API on the client side (i.e. your application), call<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm#simxStart"><em>sim.simxStart</em></a>. See the<span> </span><em>simpleTest.py</em><span> </span>script in the<span> </span><em>programming/remoteApiBindings/python</em><span> </span>directory for an example.<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm">This page</a><span> </span>lists and describes all supported Python remote API functions. CoppeliaSim remote API functions can easily be recognized from their "simx"-prefix.</p>
 <hr/>
 <p><span>將以上元素放在Python已知的目錄中後，請調用</span><em><span><span>import sim</span></span></em><span><span>加載庫。</span><span>要在客戶端（即您的應用程序）上啟用遠程API，請調用</span></span><em><span><span>sim.simxStart</span></span></em><span><span>。</span><span>有關</span></span><em><span><span>示例</span></span></em><span><span>，</span><span>請參見</span></span><em><span><span>programming / remoteApiBindings / python</span></span></em><span><span>目錄中</span><span>的</span><em><span>simpleTest.py</span></em><span>腳本</span><span>。</span></span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm"><span><span>本頁</span></span></a><span><span>列出並描述了所有受支持的Python遠程API函數。</span><span>CoppeliaSim遠程API函數可以從其“ simx”前綴輕鬆識別。</span></span></p>
-<p><b></b></p></div></div></div><br />CoppeliaSim << <a href='CoppeliaSim.html'>Previous</a> </div>
+<br />CoppeliaSim << <a href='CoppeliaSim.html'>Previous</a> <a href='Google + Domain API.html'>Next</a> >> Google + Domain API</div>
         
     <!-- footer -->
       <div class="container">
