--- a/config/content.htm
+++ b/config/content.htm
@@ -32,7 +32,12 @@
 <p><span>將onshape圖檔轉換至URL提供組員參考使用</span></p>
 <p><span>將onshape圖檔匯出成STL並將它轉入CoppeliaSim中</span></p>
 <p>W12分配至 RemoteAPI </p>
-<h1>課堂筆記</h1>
+<hr/><hr/>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week12</strong></span></h4>
+<p><span style="background-color: #99cc00; color: #000000;"></span>在 CoppeliaSim 中確認 Remote API 設定</p>
+<p>在google API 中導入 google Domain API 中的 OAuth 2.0 設定及運用</p>
+<hr/><hr/>
+<p></p><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
