--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -343,4 +343,6 @@ print(group[36:49])</pre>
 <p><b></b>參考<a href="http://mde.tw/cd2020pj1/content/CMS.html">http://mde.tw/cd2020pj1/content/CMS.html</a>中的</p>
 <p>Google + Domain API 導入</p>
 <p><span>OAuth 2.0  設定</span></p>
-<p><span></span></p></div></div></div>
+<p><span><img alt="" height="391" src="/images/未命名.png" width="337"/></span></p>
+<p>操作影片:</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZVEqJiweTdk" width="400"></iframe></p></div></div></div>
