--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -32,7 +32,20 @@
 <p><span>將onshape圖檔轉換至URL提供組員參考使用</span></p>
 <p><span>將onshape圖檔匯出成STL並將它轉入CoppeliaSim中</span></p>
 <p>W12分配至 RemoteAPI </p>
-<h1>課堂筆記</h1>
+<hr/><hr/>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week12</strong></span></h4>
+<p><span style="background-color: #99cc00; color: #000000;"></span>在 CoppeliaSim 中確認 Remote API 設定</p>
+<p>在google API 中導入 google Domain API 中的 OAuth 2.0 設定及運用</p>
+<hr/><hr/>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week13</strong></span></h4>
+<h4>VirtualBox網路查詢</h4>
+<p>可下達</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">ifconfig</pre>
+<p>若無法下達則需下載工具包</p>
+<p>下達以下指令</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">sudo apt install net-tools</pre>
+<p>完成後即可查詢網路IP位置</p>
+<p></p><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
