--- a/content/week.html
+++ b/content/week.html
@@ -181,7 +181,26 @@ img.add_border {
 <p><span>將onshape圖檔轉換至URL提供組員參考使用</span></p>
 <p><span>將onshape圖檔匯出成STL並將它轉入CoppeliaSim中</span></p>
 <p>W12分配至 RemoteAPI </p>
-<br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
+<hr/><hr/>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week12</strong></span></h4>
+<p><span style="background-color: #99cc00; color: #000000;"></span>在 CoppeliaSim 中確認 Remote API 設定</p>
+<p>在google API 中導入 google Domain API 中的 OAuth 2.0 設定及運用</p>
+<hr/><hr/>
+<h4><span style="background-color: #99cc00; color: #000000;"><strong>week13</strong></span></h4>
+<h4>VirtualBox網路查詢</h4>
+<p>可下達</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">ifconfig</pre>
+<p>若無法下達則需下載工具包</p>
+<p>下達以下指令</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">sudo apt install net-tools</pre>
+<p>完成後即可查詢網路IP位置</p>
+<p><img alt="" height="294" src="./../images/IMG_4019.JPG" width="400"/></p>
+<p>設定VirtualBox NAT的Port號</p>
+<p><img alt="" height="300" src="./../images/IMG_4020.JPG" width="400"/></p>
+<p>IPv4下的<span>Port號設定參考</span></p>
+<p><span><img alt="" height="300" src="./../images/IMG_4021.JPG" width="400"/></span></p>
+<p><span>IPv6下的<span>Port號設定參考</span></span></p>
+<p><span><span>注意客端IP必須與電腦網路連線IP一致才可連接</span></span></p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
         
     <!-- footer -->
       <div class="container">
