add cmsimde page

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -45,7 +45,14 @@
 <p>下達以下指令</p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">sudo apt install net-tools</pre>
 <p>完成後即可查詢網路IP位置</p>
-<p></p><h1>課堂筆記</h1>
+<p><img alt="" height="294" src="/images/IMG_4019.JPG" width="400"/></p>
+<p>設定VirtualBox NAT的Port號</p>
+<p><img alt="" height="300" src="/images/IMG_4020.JPG" width="400"/></p>
+<p>IPv4下的<span>Port號設定參考</span></p>
+<p><span><img alt="" height="300" src="/images/IMG_4021.JPG" width="400"/></span></p>
+<p><span>IPv6下的<span>Port號設定參考</span></span></p>
+<p><span><span>注意客端IP必須與電腦網路連線IP一致才可連接</span></span></p>
+<h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
@@ -107,7 +114,29 @@
 <p>x264能夠在普通計算機上實現多路高畫質影片的實時編碼。</p>
 <p>x264也是第一個免費的藍光影片編碼器。2010年4月，x264項目組宣布藍光格式影片編碼功能完成，使得x264成為首個免費的藍光影片編碼器。</p>
 <p>資料來源: <a href="https://zh.wikipedia.org/wiki/X264">https://zh.wikipedia.org/wiki/X264</a> (Wiki)</p>
-<h1>Assignment</h1>
+<h2>cmsimde</h2>
+<p>如何更新子模組</p>
+<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">更新submodule下的子模組</yt-formatted-string></p>
+<p><span>運用到的指令包刮</span></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">git submodule init</pre>
+<p></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">git submodule update</pre>
+<p></p>
+<p><span>目的是為了更新倉儲中缺失的submodule狀態下的子模組</span></p>
+<p><span>操作影片:</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/AXbY-toPl9Q" width="500"></iframe></span></p>
+<hr/><hr/>
+<p><span>如何將submodule下的子模組刪除</span></p>
+<p><span>刪除子模組 </span></p>
+<p><span>1.刪除子模組目錄下全部檔案 </span></p>
+<p><span>2.刪除目錄中.gitmodules中的子模組相關條件 </span></p>
+<p><span>3.刪除.git/config中子模組的相關條件</span></p>
+<p><span> 4.刪除.git/module中的子模組目錄 只需刪掉要刪掉的那個目錄 </span></p>
+<p><span>5.git rm --cached cmsimde 刪除cmsimde</span></p>
+<p><span>操作影片:</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PPZ3KhAx33s" width="500"></iframe></span></p>
+<hr/><hr/>
+<p></p><h1>Assignment</h1>
 <h2>Assignment 1</h2>
 <h4>亂數分組</h4>
 <h4><strong><a href="https://github.com/s40723147/cd2020/blob/master/PDF/cd2020%20ag2%20Project%201%20%E4%BA%82%E6%95%B8%E5%88%86%E7%B5%84.pdf">pdf連結</a></strong></h4>
@@ -358,4 +387,6 @@ print(group[36:49])</pre>
 <p><span>OAuth 2.0  設定</span></p>
 <p><span><img alt="" height="391" src="/images/未命名.png" width="337"/></span></p>
 <p>操作影片:</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZVEqJiweTdk" width="400"></iframe></p></div></div></div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZVEqJiweTdk" width="400"></iframe></p>
+</div>
+</div></div>
