--- a/content/week.html
+++ b/content/week.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a></li>
                       </ul>
                 </nav>
               </div>
@@ -200,7 +200,8 @@ img.add_border {
 <p>IPv4下的<span>Port號設定參考</span></p>
 <p><span><img alt="" height="300" src="./../images/IMG_4021.JPG" width="400"/></span></p>
 <p><span>IPv6下的<span>Port號設定參考</span></span></p>
-<p><span><span>注意客端IP必須與電腦網路連線IP一致才可連接</span></span></p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
+<p><span><span>注意客端IP必須與電腦網路連線IP一致才可連接</span></span></p>
+<br />簡介 << <a href='簡介.html'>Previous</a> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
         
     <!-- footer -->
       <div class="container">
