--- a/content/課堂筆記.html
+++ b/content/課堂筆記.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='week.html'>week</a><li class='has-children'><a href='課堂筆記.html'>課堂筆記</a><ul class='dropdown'><li><a href='cmsimde.html'>cmsimde</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li class='has-children'><a href='Project One.html'>Project One</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='Remote API.html'>Remote API</a><li><a href='Google + Domain API.html'>Google + Domain API</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week << <a href='week.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment<br /><h1>課堂筆記</h1>
+    <div id="tipue_search_content">week << <a href='week.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
@@ -216,7 +216,7 @@ img.add_border {
 <p>x264能夠在普通計算機上實現多路高畫質影片的實時編碼。</p>
 <p>x264也是第一個免費的藍光影片編碼器。2010年4月，x264項目組宣布藍光格式影片編碼功能完成，使得x264成為首個免費的藍光影片編碼器。</p>
 <p>資料來源: <a href="https://zh.wikipedia.org/wiki/X264">https://zh.wikipedia.org/wiki/X264</a> (Wiki)</p>
-<br />week << <a href='week.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
+<br />week << <a href='week.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
         
     <!-- footer -->
       <div class="container">
